--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "author": "Érik Eiji <eriknibe1@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.9.0",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
+    "@types/pg": "^8.6.6",
+    "@types/pg-format": "^1.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   },
